--- a/code/01_EDA.ipynb
+++ b/code/01_EDA.ipynb
@@ -29,8 +29,7 @@
     "import pandas as pd\n",
     "from os import listdir\n",
     "import matplotlib.pyplot as plt\n",
-    "import cv\n",
-    "\n",
+    "import cv2\n",
     "\n",
     "\n",
     "from tensorflow.keras.utils import image_dataset_from_directory\n",
@@ -858,7 +857,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
