--- a/code/01_EDA.ipynb
+++ b/code/01_EDA.ipynb
@@ -13,7 +13,8 @@
    "id": "35a4416d-d4ab-49e3-bf0c-d6d654e8bfac",
    "metadata": {},
    "source": [
-    "Explore the classes and images"
+    "Explore the classes and images.\n",
+    "I have two sets of MRI images for Alzheimer's disease and Brain tumor."
    ]
   },
   {
@@ -154,7 +155,9 @@
     "# Show several images from training data\n",
     "def plot_sample(data):\n",
     "    '''\n",
-    "    \n",
+    "    Plot a sample of images from the tenferflow ready data.\n",
+    "    Input: tenserflow ready data (from image_dataset_from_directory)\n",
+    "    Output: Nine labeled images\n",
     "    '''\n",
     "    plt.figure(figsize=(10, 10))\n",
     "    for images, labels in data.take(1):\n",
@@ -177,6 +180,11 @@
    "source": [
     "# Base line\n",
     "def normalized_dict(dict_to_norm):\n",
+    "    '''\n",
+    "    Normalize dictionary values\n",
+    "    Input: dictionary \n",
+    "    Return: dictionary with normalized values\n",
+    "    '''\n",
     "    sum_all = sum(dict_to_norm.values())\n",
     "    for k,v in dict_to_norm.items():\n",
     "        dict_to_norm[k] = round(v/sum_all,2)\n",
@@ -198,7 +206,8 @@
     "tags": []
    },
    "source": [
-    "## Alzheimer's "
+    "## Alzheimer's \n",
+    "First I will explore Alzheimer's data"
    ]
   },
   {
@@ -244,7 +253,7 @@
    "id": "5c4e4bf4-75f5-4e36-8aba-0dad9130a68f",
    "metadata": {},
    "source": [
-    "The classes are extremely imbalanced. I will need to use resampling to get better results from the model."
+    "The classes are extremely imbalanced, with just a few images for the Moderate class"
    ]
   },
   {
@@ -341,7 +350,7 @@
    "id": "d21c8d61-a9fd-427b-98b0-6a520a768399",
    "metadata": {},
    "source": [
-    "All images for Alzheimer's disease are the same size, It is not too big, I will use it in the TensorFlow data preparetion."
+    "All images for Alzheimer's disease are the same size."
    ]
   },
   {
@@ -485,46 +494,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "61b55941-02c9-4559-a010-8d9bffa1edd9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32, 240, 240, 1)\n",
-      "(32, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check the shapes of images and lables\n",
-    "for image_batch, labels_batch in al_train_ds.take(1):\n",
-    "    print(image_batch.shape)\n",
-    "    print(labels_batch.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d5006bd-ec43-4825-931e-da3761859162",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2979671e-a637-4481-8a09-77f5c2d0c93c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "d9466df0-749f-45af-aaec-a8a3d0a22ab0",
    "metadata": {},
@@ -539,7 +508,8 @@
     "tags": []
    },
    "source": [
-    "## Brain Tumor"
+    "## Brain Tumor\n",
+    "Here I will explore Brain tumor images"
    ]
   },
   {
@@ -684,7 +654,7 @@
    "id": "b60bdfa3-9f88-4ca9-9dd9-66e3406f5ae7",
    "metadata": {},
    "source": [
-    "The sizes of the images are the same and identical to the Alzheimer's disease images."
+    "The sizes of the images are different in Brain tumor dataset. They are bigger, than Alzheimer's disease."
    ]
   },
   {
@@ -815,44 +785,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bd08e9e-ffc0-4de7-85e7-51c9542fec22",
+   "cell_type": "markdown",
+   "id": "c27e57d2-708d-442f-a6c7-80b982108c8e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b546385-2cbe-4294-8428-43e175ca5116",
+   "cell_type": "markdown",
+   "id": "892a54b2-b045-4f7c-be18-8e993c6c4f4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67359c65-ab0a-41d7-bf5c-d512736527e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c7cba35-5b64-42f5-9a9d-1b795f0b221e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2efc7fde-e2da-444a-a0db-a1c55dec3f95",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Alzheimer's has extremely imbalanced classes and lower image resolutions, Brain tumor classes are more balanced and have higher resolution. In the next notebook I will classify Alzheimer's disease"
+   ]
   }
  ],
  "metadata": {
