--- a/code/03_Brain_tumor.ipynb
+++ b/code/03_Brain_tumor.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "a38ed699-a1a4-4aa9-aed8-e12d2402d0c5",
    "metadata": {
     "tags": []
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "77de2526-a8a8-45a7-aef5-6f75d384df17",
    "metadata": {
     "tags": []
@@ -133,108 +133,6 @@
     "    image_size=(image_size, image_size),\n",
     "    seed=18\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "d441dd63-f968-4636-9e5e-983110f2bc1b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_5\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " rescaling_1 (Rescaling)     (None, 240, 240, 1)       0         \n",
-      "                                                                 \n",
-      " conv2d_4 (Conv2D)           (None, 239, 239, 64)      320       \n",
-      "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 119, 119, 64)     0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 118, 118, 64)      16448     \n",
-      "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 59, 59, 64)       0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " conv2d_6 (Conv2D)           (None, 58, 58, 128)       32896     \n",
-      "                                                                 \n",
-      " max_pooling2d_2 (MaxPooling  (None, 29, 29, 128)      0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " conv2d_7 (Conv2D)           (None, 28, 28, 256)       131328    \n",
-      "                                                                 \n",
-      " max_pooling2d_3 (MaxPooling  (None, 14, 14, 256)      0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " conv2d_8 (Conv2D)           (None, 13, 13, 512)       524800    \n",
-      "                                                                 \n",
-      " max_pooling2d_4 (MaxPooling  (None, 6, 6, 512)        0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 18432)             0         \n",
-      "                                                                 \n",
-      " dropout_4 (Dropout)         (None, 18432)             0         \n",
-      "                                                                 \n",
-      " dense_5 (Dense)             (None, 256)               4718848   \n",
-      "                                                                 \n",
-      " dropout_5 (Dropout)         (None, 256)               0         \n",
-      "                                                                 \n",
-      " dense_6 (Dense)             (None, 128)               32896     \n",
-      "                                                                 \n",
-      " dropout_6 (Dropout)         (None, 128)               0         \n",
-      "                                                                 \n",
-      " dense_7 (Dense)             (None, 4)                 516       \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 5,458,052\n",
-      "Trainable params: 5,458,052\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = Sequential()\n",
-    "\n",
-    "model.add(layers.Input(shape=(image_size, image_size, 1)))\n",
-    "model.add(layers.Rescaling(1./255))\n",
-    "\n",
-    "#First Convolution\n",
-    "model.add(Conv2D(64, (2,2),activation = 'relu'))\n",
-    "model.add(MaxPooling2D(pool_size = (2,2),strides = (2,2)))\n",
-    "#Second Convolution\n",
-    "model.add(Conv2D(64, (2,2),activation = 'relu'))\n",
-    "model.add(MaxPooling2D(pool_size = (2,2),strides = (2,2)))\n",
-    "#Third Convolution\n",
-    "model.add(Conv2D(128, (2,2),activation = 'relu'))\n",
-    "model.add(MaxPooling2D(pool_size = (2,2),strides = (2,2)))\n",
-    "#Fourth Convolution\n",
-    "model.add(Conv2D(256, (2,2),activation = 'relu'))\n",
-    "model.add(MaxPooling2D(pool_size = (2,2),strides = (2,2)))\n",
-    "#Fifth Convolution\n",
-    "model.add(Conv2D(512, (2,2),activation = 'relu'))\n",
-    "model.add(MaxPooling2D(pool_size = (2,2),strides = (2,2)))\n",
-    "#Flatten\n",
-    "model.add(Flatten())\n",
-    "# Fully Connected\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(Dense(256, activation=\"relu\", kernel_regularizer=l2(0.0005))) \n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(Dense(128, activation=\"relu\", kernel_regularizer=l2(0.0005)))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(Dense(4, activation='softmax'))\n",
-    "# Compile\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "model.summary()"
    ]
   },
   {
@@ -352,10 +250,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a7296cc-1338-459e-9314-0a8758ee2cf4",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "id": "d441dd63-f968-4636-9e5e-983110f2bc1b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " rescaling (Rescaling)       (None, 240, 240, 1)       0         \n",
+      "                                                                 \n",
+      " conv2d (Conv2D)             (None, 239, 239, 64)      320       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 119, 119, 64)     0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 118, 118, 64)      16448     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 59, 59, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 58, 58, 128)       32896     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 29, 29, 128)      0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 28, 28, 256)       131328    \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 14, 14, 256)      0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_4 (Conv2D)           (None, 13, 13, 512)       524800    \n",
+      "                                                                 \n",
+      " max_pooling2d_4 (MaxPooling  (None, 6, 6, 512)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 18432)             0         \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 18432)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 256)               4718848   \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 256)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 4)                 516       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 5,458,052\n",
+      "Trainable params: 5,458,052\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -701,7 +658,7 @@
     }
    ],
    "source": [
-    "# Read images as RGB to use in pre-trained model\n",
+    "# Read images as RGB to use in pre-trained model - my best model for this notebook\n",
     "\n",
     "model = Sequential()\n",
     "\n",
@@ -1664,7 +1621,7 @@
    "id": "fcb4f6f1-b006-4f2e-aa93-a0036fbe6204",
    "metadata": {},
    "source": [
-    "My best model so far is EfficientNetV2S with greyscale images read as RGB. The accuracy is 80% on the test set. It is still overfit and struggles with Glioma the most. In the next notebook I will use Augmentation to improve the model."
+    "My best model so far is EfficientNetV2S with greyscale images read as RGB. The accuracy is 80% on the test set. It is still overfit and struggles with Glioma the most. As with Alzheimer's images, all pretrained models performed better with greyscale images read as RGB compare to transformed from Greyscale to RGB. In the next notebook I will use Augmentation to improve the model."
    ]
   }
  ],
