update commments and readme

--- a/code/02_Alzheimer.ipynb
+++ b/code/02_Alzheimer.ipynb
@@ -13,7 +13,8 @@
    "id": "a5c39e43-13c9-4e48-bdc3-656feccffc5f",
    "metadata": {},
    "source": [
-    "In this notebook, I will fit the models for Alzheimer's classification. I have three levels of disease Very Mild, Mild, and Moderate. They all have different numbers of images for training - imbalanced classes. My No Disease class has the most images and Modelate disease has very few images. My baseline is 50%. [Study](https://www.medscape.com/viewarticle/883192) showed that Alzheimer's disease classification accuracy from MRI scans is around 75%. I will build a CNN model and use pre-trained models - EfficientNetV2S, Xception, and Resnet50. To combat imbalanced classes I will apply class weights to our best model."
+    "The focus of this notebook is to train models for Alzheimer's classification with three disease levels: Very Mild, Mild, and Moderate. The number of images for each level is imbalanced, with the No Disease class having the most images and the Moderate disease class having the fewest. The baseline accuracy is 50%.\n",
+    "[Study](https://www.medscape.com/viewarticle/883192) showed that Alzheimer's disease classification from MRI scans by medical professionals archives accuracy  around 75%. I will use CNN models and pre-trained models, such as EfficientNetV2S, Xception, and ResNet50. I will also apply class weights to the best model to address the issue of imbalanced classes."
    ]
   },
   {
@@ -1307,8 +1308,7 @@
    "id": "4cc948bc-d8cc-49da-b62f-6bc1cadb782a",
    "metadata": {},
    "source": [
-    "The ResNet50 is my best model so far with about 67% accuracy. My validation and training accuracies are much higher. I will need to combat overfitting. Xception performed the worse on this data. Adding weights did not improve model accuracy.\n",
-    "In the next notebook, I will use the same models on Brain Tumor data."
+    "The ResNet50 model achieved the highest accuracy among the three pre-trained models tested, at around 67%. However, there was a significant gap between the validation/training accuracies and the test accuracy, indicating overfitting. The Xception model performed poorly on this dataset. Applying class weights did not improve the model accuracy. In the next notebook, I will evaluate the same models on the Brain Tumor dataset."
    ]
   }
  ],
