--- a/code/03_Brain_tumor.ipynb
+++ b/code/03_Brain_tumor.ipynb
@@ -13,9 +13,7 @@
    "id": "330eb9b1-62e0-4d2b-afb3-46f931528b39",
    "metadata": {},
    "source": [
-    "In this notebook, I will fit the models for Brain Tumor classification. I have three different tumors Glioma, Meningioma, and Pituitary. They all have the same number of images for training. My No Tumor class is almost half the size of any tumor class. My baseline for this classification is 30%.\n",
-    "[Study](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8666750/) showed that just from MRI Brain Tumor Diagnosis was accurate around 75% of the time and the misclassification was different for different types of tumor. The most challenging to diagnose right from MRI were Meningiomas.\n",
-    "I will build a CNN model and use pre-trained models - EfficientNetV2S, Xception, and Resnet50."
+    "In this notebook, my focus will be on building models for Brain Tumor classification. I have three types of tumors - Glioma, Meningioma, and Pituitary, and a No Tumor class with nearly half the images of any tumor class. The baseline for this classification is 30%. A [study](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8666750/) has shown that Brain Tumor Diagnosis accuracy from MRI scans by medical professionals was approximately 75%, and the misclassification varied for different types of tumors, with Meningiomas being the most challenging to diagnose accurately from MRI. To improve the classification accuracy, I will use pre-trained models - EfficientNetV2S, Xception, and Resnet50 - and build a CNN model."
    ]
   },
   {
@@ -1445,7 +1443,7 @@
    "id": "fcb4f6f1-b006-4f2e-aa93-a0036fbe6204",
    "metadata": {},
    "source": [
-    "My best model so far is EfficientNetV2S with grayscale images read as RGB. The accuracy is 80% on the test set. It is still overfit and struggles with Glioma the most. All pretrained models performed better with grayscale images read as RGB compare to transformed from Grayscale to RGB. In the next notebook I will use Augmentation to improve the model."
+    "EfficientNetV2S is my current best model, achieving 75% accuracy on the test set. However, it still suffers from overfitting and struggles particularly with Glioma classification. To improve the model, I will be exploring the use of augmentation techniques in the next notebook."
    ]
   }
  ],
