--- a/code/04_Augmentation.ipynb
+++ b/code/04_Augmentation.ipynb
@@ -13,7 +13,7 @@
    "id": "93cb36b5-2bfd-4328-a2fe-4448b5675f1c",
    "metadata": {},
    "source": [
-    "Augmentation for MRI has its limitaions. The model needs to recognize a specific pattern or shape that is common for each class and it can be disturbed by the augmentation. I will fit the models using augmented images from ImageDataGenerator and Albumentations. Ideas for augmentation types suitable for medical images I took from [article](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5977656/) "
+    "Incorporating augmentation techniques for MRI data can be challenging as the model needs to identify specific patterns or shapes that are common for each class, and the augmentation process can potentially disrupt these patterns. To address this, I will use Albumentations to augment the MRI images in my next notebook. To determine which augmentation types are suitable for medical images, I took inspiration from an [article](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5977656/) "
    ]
   },
   {
@@ -622,7 +622,7 @@
    "id": "50c6555c-3d79-4465-90ee-ef51bab8306c",
    "metadata": {},
    "source": [
-    "I have tried augmenting images using Albumentations on the best models from the previous two notebooks. For Alzheimer's, the accuracy stayed the same and for the Brain tumor classification accuracy increased. I will try models with and without Albumentation augmentations on the final models for the Streamlit application."
+    "After experimenting with Albumentations to augment the images in the best models from the previous notebooks, I found that there was no improvement in the Alzheimer's classification accuracy. However, for the Brain Tumor classification, the accuracy increased. In the next step, I plan to developed four different models and compare the models trained with and without Albumentations to decide which models to use in the final Streamlit application."
    ]
   }
  ],
